fix scrollbar-induced offset & vertical centering
this mf forgot about basic ass margins trying to do allat bullshit

--- a/src/app.css
+++ b/src/app.css
@@ -5,3 +5,8 @@
     --font-mono: "Geist Mono", monospace;
     --font-emoji: 'Noto Color Emoji';
 }
+
+:root {
+    scrollbar-gutter: stable both-edges;
+    scrollbar-width: thin;
+}
